2007-10-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): Fix stupid error that caused 
	'set term png <any options>' to fail.
	Bug #1810957

	* term/cairo.trm (cairotrm_options): Ignore "transparent" keyword when
	the output mode is pdf.

2007-10-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/cairo.trm (cairotrm_init): Do the sanity check for an existing
	*cairo terminal once and for all.
	Apply hinting in the pngcairo terminal: pngs are bitmapped, so they
	look much better with lines at integer positions.
	Also apply the "saturate" technique to get seamless polygons in pm3d
	mode.

2007-10-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/cairo.trm:  Differentiate cairo png and pdf terminals.
	Set separate defaults for canvas size, font size, and linewidth.
	Output png to a stream so that it can be piped for interactive display.
	Ignore irrelevant keywords used by libgd-based png terminal.
	Add "transparent" keyword for png.

2007-10-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/cairo.trm: Change all internal variable names from cairopdf_* to
	cairotrm_* since the code now supports multiple cairo-based terminals.
	Later we will introduce parallel variables cairopdf_*, cairopng_*, etc
	wherever there is a need to distinguish different terminals.

	* demo/html/Makefile demo/html/webify.pl:  Update syntax for font
	specifications.

2007-10-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/cairo.trm src/wxterminal/gp_cairo.c (gp_cairo_solid_background 
	gp_cairo_clear_background) wxterminal/gp_cairo.h wxterminal/wxt_gui.cpp:
	Provide alternative routines to initialize the background to either
	solid white or transparent.

2007-10-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term):  Always accept the full name of a terminal,
	even if it is a leading substring of a longer name.  E.g. accept
	"set term pdf" even if there are both pdf and pdfcairo terminals.
