@@ -7,6 +7,7 @@ New features, changes and fixes since gnuplot version 4.2
 * NEW iteration within a plot command; e.g.     plot for [i=1:10] foo(i)
 * NEW operators '=' and ',' in expression syntax
 * NEW pdf terminal based on cairo and pango
+* NEW error status variables GPVAL_ERRNO and GPVAL_ERRMSG
 * FIX better support for locale internationalization, UTF-8 encoding
 * CHANGE fillstyle border type, if any, is applied to candlesticks
 * CHANGE 'set key textcolor rgb variable' will use plot colors for key entries
